Fix text shifting when hovering a link

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,5 +237,5 @@ a:link, a:visited, .icontext {
 }
 
 a:hover {
-    font-weight: 700;
+    text-decoration: underline;
 }
